--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
 
 <body>
 
+    <script src="js/db.js"></script>
+    <script src="js/calc.js"></script>
     <script src="js/index.js"></script>
 </body>
 
