Initial html layout

--- a/index.html
+++ b/index.html
@@ -6,13 +6,191 @@
     <meta http-equiv="Pragma" content="no-cache">
     <meta http-equiv="Cache-Control" content="no-cache">
     <meta name="viewport" content="width=device-width">
-    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
+    <!-- <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script> -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb"
+        crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh"
+        crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ"
+        crossorigin="anonymous"></script>
+
+    <link href="css/index.css" rel="stylesheet">
     <title>MFF Weapon Boost Calculator</title>
 </head>
 
 <body>
+    <div class="container-fluid">
+        <div id="setting-area"></div>
+        <div class="row">
+        <div id="weapon-select-area" class="col-sm-2">
+            <input id="weapon-search" type="text" class="form-control" placeholder="Search the list...">
+            <select id="weapon-select" class="form-control" size=10></select>
+            <button id="weapon-add" class="btn btn-primary">Add to Boost</button>
+        </div>
+        <div id="weapon-boost-area" class="col-sm-10">
+            <div class="weapon-boost-group row">
+                <div class="weapon-info">
+                    <img src="http://via.placeholder.com/50x50" width=50 height=50>
+                    <label>Weapon Name</label>
+                </div>
+                <div class="weapon-stat base-stat row">
+                    <div class="col">
+                        <div class="row">
+                            <label class="col-custom-label col-form-label col-form-label-sm">HP</label>
+                            <div class="col-custom-input">
+                                <input type="number" class="form-control form-control-sm">
+                            </div>
+                        </div>
+                        <div class="row">
+                            <label class="col-custom-label col-form-label col-form-label-sm">Attack</label>
+                            <div class="col-custom-input">
+                                <input type="number" class="form-control form-control-sm">
+                            </div>
+                        </div>
+                        <div class="row">
+                            <label class="col-custom-label col-form-label col-form-label-sm">Break</label>
+                            <div class="col-custom-input">
+                                <input type="number" class="form-control form-control-sm">
+                            </div>
+                        </div>
+                        <div class="row">
+                            <label class="col-custom-label col-form-label col-form-label-sm">Magic</label>
+                            <div class="col-custom-input">
+                                <input type="number" class="form-control form-control-sm">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="row">
+                            <label class="col-custom-label col-form-label col-form-label-sm">Critical</label>
+                            <div class="col-custom-input">
+                                <input type="number" class="form-control form-control-sm">
+                            </div>
+                        </div>
+                        <div class="row">
+                            <label class="col-custom-label col-form-label col-form-label-sm">Speed</label>
+                            <div class="col-custom-input">
+                                <input type="number" class="form-control form-control-sm">
+                            </div>
+                        </div>
+                        <div class="row">
+                            <label class="col-custom-label col-form-label col-form-label-sm">Defense</label>
+                            <div class="col-custom-input">
+                                <input type="number" class="form-control form-control-sm">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="row">
+                            <label class="col-custom-label col-form-label col-form-label-sm">Ability 1</label>
+                            <div class="col-custom-input">
+                                <input type="number" class="form-control form-control-sm">
+                            </div>
+                        </div>
+                        <div class="row">
+                            <label class="col-custom-label col-form-label col-form-label-sm">Ability 2</label>
+                            <div class="col-custom-input">
+                                <input type="number" class="form-control form-control-sm">
+                            </div>
+                        </div>
+                        <div class="row">
+                            <label class="col-custom-label col-form-label col-form-label-sm">Ability 3</label>
+                            <div class="col-custom-input">
+                                <input type="number" class="form-control form-control-sm">
+                            </div>
+                        </div>
+                        <div class="row">
+                            <label class="col-custom-label col-form-label col-form-label-sm">Ability 4</label>
+                            <div class="col-custom-input">
+                                <input type="number" class="form-control form-control-sm">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="weapon-stat desired-stat row">
+                    <div class="col">
+                        <div class="row">
+                            <label class="col-custom-label col-form-label col-form-label-sm">HP</label>
+                            <div class="col-custom-input">
+                                <input type="number" class="form-control form-control-sm">
+                            </div>
+                        </div>
+                        <div class="row">
+                            <label class="col-custom-label col-form-label col-form-label-sm">Attack</label>
+                            <div class="col-custom-input">
+                                <input type="number" class="form-control form-control-sm">
+                            </div>
+                        </div>
+                        <div class="row">
+                            <label class="col-custom-label col-form-label col-form-label-sm">Break</label>
+                            <div class="col-custom-input">
+                                <input type="number" class="form-control form-control-sm">
+                            </div>
+                        </div>
+                        <div class="row">
+                            <label class="col-custom-label col-form-label col-form-label-sm">Magic</label>
+                            <div class="col-custom-input">
+                                <input type="number" class="form-control form-control-sm">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="row">
+                            <label class="col-custom-label col-form-label col-form-label-sm">Critical</label>
+                            <div class="col-custom-input">
+                                <input type="number" class="form-control form-control-sm">
+                            </div>
+                        </div>
+                        <div class="row">
+                            <label class="col-custom-label col-form-label col-form-label-sm">Speed</label>
+                            <div class="col-custom-input">
+                                <input type="number" class="form-control form-control-sm">
+                            </div>
+                        </div>
+                        <div class="row">
+                            <label class="col-custom-label col-form-label col-form-label-sm">Defense</label>
+                            <div class="col-custom-input">
+                                <input type="number" class="form-control form-control-sm">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="row">
+                            <label class="col-custom-label col-form-label col-form-label-sm">Ability 1</label>
+                            <div class="col-custom-input">
+                                <input type="number" class="form-control form-control-sm">
+                            </div>
+                        </div>
+                        <div class="row">
+                            <label class="col-custom-label col-form-label col-form-label-sm">Ability 2</label>
+                            <div class="col-custom-input">
+                                <input type="number" class="form-control form-control-sm">
+                            </div>
+                        </div>
+                        <div class="row">
+                            <label class="col-custom-label col-form-label col-form-label-sm">Ability 3</label>
+                            <div class="col-custom-input">
+                                <input type="number" class="form-control form-control-sm">
+                            </div>
+                        </div>
+                        <div class="row">
+                            <label class="col-custom-label col-form-label col-form-label-sm">Ability 4</label>
+                            <div class="col-custom-input">
+                                <input type="number" class="form-control form-control-sm">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="calculated-result">
+                </div>
+            </div>
+        </div>
+    </div>
+    </div>
 
     <script src="js/db.js"></script>
     <script src="js/calc.js"></script>
