--- a/index.html
+++ b/index.html
@@ -11,21 +11,19 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script> -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb"
         crossorigin="anonymous">
-        <script
-        src="https://code.jquery.com/jquery-3.2.1.min.js"
-        integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
+    <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
         crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh"
         crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ"
         crossorigin="anonymous"></script>
     <script src="js/editablegrid/editablegrid.js"></script>
-    <script src="js/editablegrid/editablegrid_renderers.js" ></script>
-    <script src="js/editablegrid/editablegrid_editors.js" ></script>
-    <script src="js/editablegrid/editablegrid_validators.js" ></script>
-    <script src="js/editablegrid/editablegrid_utils.js" ></script>
-    <script src="js/editablegrid/editablegrid_charts.js" ></script>
-		
+    <script src="js/editablegrid/editablegrid_renderers.js"></script>
+    <script src="js/editablegrid/editablegrid_editors.js"></script>
+    <script src="js/editablegrid/editablegrid_validators.js"></script>
+    <script src="js/editablegrid/editablegrid_utils.js"></script>
+    <script src="js/editablegrid/editablegrid_charts.js"></script>
+
     <link href="css/editablegrid.css" rel="stylesheet" type="text/css" media="screen">
     <link href="css/index.css" rel="stylesheet">
     <title>MFF Weapon Boost Calculator</title>
@@ -311,13 +309,25 @@
                     <div class="calculated-result">
                     </div>
                 </div> -->
-                <div class="weapon-boost-group col">
+                <div id="weapon-slot-template" class="weapon-boost-group col hidden">
                     <div>
                         <img src="http://via.placeholder.com/50x50" width=50 height=50>
-                        <label>Weapon Name</label>
+                        <label class="weapon-slot-name">Weapon Name</label>
                     </div>
-                    <div>
-                        <div id="tablecontent"></div>
+                    <div class="row">
+                        <div class="stat-calc-input"></div>
+                        <div class="stat-calc-result">
+                            <table class="weapon-stat">
+                                <tr>
+                                    <th>Total Boost Time</th>
+                                    <th>Elixir Cost</th>
+                                </tr>
+                                <tr>
+                                    <td class="time-cost">0</td>
+                                    <td class="elixir-cost">0</td>
+                                </tr>
+                            </table>
+                        </div>
                     </div>
                 </div>
             </div>
