Added weapon add/search functions

--- a/index.html
+++ b/index.html
@@ -34,281 +34,11 @@
         <div id="setting-area"></div>
         <div class="row">
             <div id="weapon-select-area" class="col-sm-2">
-                <input id="weapon-search" type="text" class="form-control" placeholder="Search the list...">
+                <input id="weapon-search" type="text" class="form-control" placeholder="Search weapons...">
                 <select id="weapon-select" class="form-control" size=10></select>
                 <button id="weapon-add" class="btn btn-primary">Add to Boost</button>
             </div>
             <div id="weapon-boost-area" class="col-sm-10">
-                <!-- <div class="weapon-boost-group row">
-                    <div class="weapon-info">
-                        <img src="http://via.placeholder.com/50x50" width=50 height=50>
-                        <label>Weapon Name</label>
-                    </div>
-                    <div class="weapon-stat base-stat row">
-                        <div class="col">
-                            <div class="row">
-                                <label class="col-custom-label col-form-label col-form-label-sm">HP</label>
-                                <div class="col-custom-input">
-                                    <input type="number" class="form-control form-control-sm">
-                                </div>
-                            </div>
-                            <div class="row">
-                                <label class="col-custom-label col-form-label col-form-label-sm">Attack</label>
-                                <div class="col-custom-input">
-                                    <input type="number" class="form-control form-control-sm">
-                                </div>
-                            </div>
-                            <div class="row">
-                                <label class="col-custom-label col-form-label col-form-label-sm">Break</label>
-                                <div class="col-custom-input">
-                                    <input type="number" class="form-control form-control-sm">
-                                </div>
-                            </div>
-                            <div class="row">
-                                <label class="col-custom-label col-form-label col-form-label-sm">Magic</label>
-                                <div class="col-custom-input">
-                                    <input type="number" class="form-control form-control-sm">
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col">
-                            <div class="row">
-                                <label class="col-custom-label col-form-label col-form-label-sm">Critical</label>
-                                <div class="col-custom-input">
-                                    <input type="number" class="form-control form-control-sm">
-                                </div>
-                            </div>
-                            <div class="row">
-                                <label class="col-custom-label col-form-label col-form-label-sm">Speed</label>
-                                <div class="col-custom-input">
-                                    <input type="number" class="form-control form-control-sm">
-                                </div>
-                            </div>
-                            <div class="row">
-                                <label class="col-custom-label col-form-label col-form-label-sm">Defense</label>
-                                <div class="col-custom-input">
-                                    <input type="number" class="form-control form-control-sm">
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col">
-                            <div class="row">
-                                <label class="col-custom-label col-form-label col-form-label-sm">Ability 1</label>
-                                <div class="col-custom-input">
-                                    <input type="number" class="form-control form-control-sm">
-                                </div>
-                            </div>
-                            <div class="row">
-                                <label class="col-custom-label col-form-label col-form-label-sm">Ability 2</label>
-                                <div class="col-custom-input">
-                                    <input type="number" class="form-control form-control-sm">
-                                </div>
-                            </div>
-                            <div class="row">
-                                <label class="col-custom-label col-form-label col-form-label-sm">Ability 3</label>
-                                <div class="col-custom-input">
-                                    <input type="number" class="form-control form-control-sm">
-                                </div>
-                            </div>
-                            <div class="row">
-                                <label class="col-custom-label col-form-label col-form-label-sm">Ability 4</label>
-                                <div class="col-custom-input">
-                                    <input type="number" class="form-control form-control-sm">
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="weapon-stat desired-stat row">
-                        <div class="col">
-                            <div class="row">
-                                <label class="col-custom-label col-form-label col-form-label-sm">HP</label>
-                                <div class="col-custom-input">
-                                    <input type="number" class="form-control form-control-sm">
-                                </div>
-                            </div>
-                            <div class="row">
-                                <label class="col-custom-label col-form-label col-form-label-sm">Attack</label>
-                                <div class="col-custom-input">
-                                    <input type="number" class="form-control form-control-sm">
-                                </div>
-                            </div>
-                            <div class="row">
-                                <label class="col-custom-label col-form-label col-form-label-sm">Break</label>
-                                <div class="col-custom-input">
-                                    <input type="number" class="form-control form-control-sm">
-                                </div>
-                            </div>
-                            <div class="row">
-                                <label class="col-custom-label col-form-label col-form-label-sm">Magic</label>
-                                <div class="col-custom-input">
-                                    <input type="number" class="form-control form-control-sm">
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col">
-                            <div class="row">
-                                <label class="col-custom-label col-form-label col-form-label-sm">Critical</label>
-                                <div class="col-custom-input">
-                                    <input type="number" class="form-control form-control-sm">
-                                </div>
-                            </div>
-                            <div class="row">
-                                <label class="col-custom-label col-form-label col-form-label-sm">Speed</label>
-                                <div class="col-custom-input">
-                                    <input type="number" class="form-control form-control-sm">
-                                </div>
-                            </div>
-                            <div class="row">
-                                <label class="col-custom-label col-form-label col-form-label-sm">Defense</label>
-                                <div class="col-custom-input">
-                                    <input type="number" class="form-control form-control-sm">
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col">
-                            <div class="row">
-                                <label class="col-custom-label col-form-label col-form-label-sm">Ability 1</label>
-                                <div class="col-custom-input">
-                                    <input type="number" class="form-control form-control-sm">
-                                </div>
-                            </div>
-                            <div class="row">
-                                <label class="col-custom-label col-form-label col-form-label-sm">Ability 2</label>
-                                <div class="col-custom-input">
-                                    <input type="number" class="form-control form-control-sm">
-                                </div>
-                            </div>
-                            <div class="row">
-                                <label class="col-custom-label col-form-label col-form-label-sm">Ability 3</label>
-                                <div class="col-custom-input">
-                                    <input type="number" class="form-control form-control-sm">
-                                </div>
-                            </div>
-                            <div class="row">
-                                <label class="col-custom-label col-form-label col-form-label-sm">Ability 4</label>
-                                <div class="col-custom-input">
-                                    <input type="number" class="form-control form-control-sm">
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="calculated-result">
-                    </div>
-                </div>
-                <div class="weapon-boost-group row">
-                    <div class="weapon-info">
-                        <img src="http://via.placeholder.com/50x50" width=50 height=50>
-                        <label>Weapon Name</label>
-                    </div>
-                    <div class="weapon-stat base-stat row">
-                        <div class="col stat-raw">
-                            <div class="row">
-                                <label class="stat-label">Label</label>
-                                <input class="stat-input" type="number">
-                            </div>
-                            <div class="row">
-                                <label class="stat-label">Attack</label>
-                                <input class="stat-input" type="number">
-                            </div>
-                            <div class="row">
-                                <label class="stat-label">Label</label>
-                                <input class="stat-input" type="number">
-                            </div>
-                            <div class="row">
-                                <label class="stat-label">Label</label>
-                                <input class="stat-input" type="number">
-                            </div>
-                        </div>
-                        <div class="col stat-star">
-                            <div class="row">
-                                <label class="stat-label">Critical</label>
-                                <input class="stat-input" type="number">
-                            </div>
-                            <div class="row">
-                                <label class="stat-label">Label</label>
-                                <input class="stat-input" type="number">
-                            </div>
-                            <div class="row">
-                                <label class="stat-label">Label</label>
-                                <input class="stat-input" type="number">
-                            </div>
-                        </div>
-                        <div class="col stat-ability">
-                            <div class="row">
-                                <label class="stat-label">Label</label>
-                                <div>
-                                    <input class="stat-input" type="number">
-                                </div>
-                            </div>
-                            <div class="row">
-                                <label class="stat-label">Label</label>
-                                <input class="stat-input" type="number">
-                            </div>
-                            <div class="row">
-                                <label class="stat-label">Label</label>
-                                <input class="stat-input" type="number">
-                            </div>
-                            <div class="row">
-                                <label class="stat-label">Label</label>
-                                <input class="stat-input" type="number">
-                            </div>
-                        </div>
-                    </div>
-                    <div class="weapon-stat final-stat row">
-                        <div class="col">
-                            <div class="row">
-                                <label class="stat-label">Label</label>
-                                <input class="stat-input" type="number">
-                            </div>
-                            <div class="row">
-                                <label class="stat-label">Label</label>
-                                <input class="stat-input" type="number">
-                            </div>
-                            <div class="row">
-                                <label class="stat-label">Label</label>
-                                <input class="stat-input" type="number">
-                            </div>
-                            <div class="row">
-                                <label class="stat-label">Label</label>
-                                <input class="stat-input" type="number">
-                            </div>
-                        </div>
-                        <div class="col">
-                            <div class="row">
-                                <label class="stat-label">Label</label>
-                                <input class="stat-input" type="number">
-                            </div>
-                            <div class="row">
-                                <label class="stat-label">Label</label>
-                                <input class="stat-input" type="number">
-                            </div>
-                            <div class="row">
-                                <label class="stat-label">Label</label>
-                                <input class="stat-input" type="number">
-                            </div>
-                        </div>
-                        <div class="col">
-                            <div class="row">
-                                <label class="stat-label">Label</label>
-                                <input class="stat-input" type="number">
-                            </div>
-                            <div class="row">
-                                <label class="stat-label">Label</label>
-                                <input class="stat-input" type="number">
-                            </div>
-                            <div class="row">
-                                <label class="stat-label">Label</label>
-                                <input class="stat-input" type="number">
-                            </div>
-                            <div class="row">
-                                <label class="stat-label">Label</label>
-                                <input class="stat-input" type="number">
-                            </div>
-                        </div>
-                    </div>
-                    <div class="calculated-result">
-                    </div>
-                </div> -->
                 <div id="weapon-slot-template" class="weapon-boost-group col hidden">
                     <div>
                         <img src="http://via.placeholder.com/50x50" width=50 height=50>
@@ -334,6 +64,7 @@
         </div>
     </div>
 
+    <script src="js/common.js"></script>
     <script src="js/db.js"></script>
     <script src="js/calc.js"></script>
     <script src="js/weaponSlot.js"></script>
