--- a/index.html
+++ b/index.html
@@ -6,23 +6,10 @@
     <meta http-equiv="Pragma" content="no-cache">
     <meta http-equiv="Cache-Control" content="no-cache">
     <meta name="viewport" content="width=device-width">
-    <!-- <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
-    <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script> -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb"
-        crossorigin="anonymous">
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
         crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh"
-        crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ"
-        crossorigin="anonymous"></script>
-    <script src="js/editablegrid/editablegrid.js"></script>
-    <script src="js/editablegrid/editablegrid_renderers.js"></script>
-    <script src="js/editablegrid/editablegrid_editors.js"></script>
-    <script src="js/editablegrid/editablegrid_validators.js"></script>
-    <script src="js/editablegrid/editablegrid_utils.js"></script>
-    <script src="js/editablegrid/editablegrid_charts.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
     <link href="css/editablegrid.css" rel="stylesheet" type="text/css" media="screen">
     <link href="css/index.css" rel="stylesheet">
@@ -30,13 +17,47 @@
 </head>
 
 <body>
+    <nav class="navbar navbar-inverse navbar-fixed-top">
+        <span class="navbar-brand">Mobius Final Fantasy Weapon Boost Calculator</span>
+    </nav>
     <div class="container-fluid">
         <div id="setting-area"></div>
         <div class="row">
             <div id="weapon-select-area" class="col-sm-2">
-                <input id="weapon-search" type="text" class="form-control" placeholder="Search weapons...">
-                <select id="weapon-select" class="form-control" size=10></select>
-                <button id="weapon-add" class="btn btn-primary">Add to Boost</button>
+                <h4>Weapon List</h4>
+                <input id="weapon-search" type="text" placeholder="Search weapons...">
+                <select id="weapon-select" size=10></select>
+                <button id="weapon-add">Add to Boost</button>
+                <div>
+                    <h4>Settings</h4>
+                    <form>
+                        <div class="checkbox">
+                            <label>
+                                <input type="checkbox" id="setting-natural-sp-stam" checked> Use natural SP stamina
+                            </label>
+                        </div>
+                        <div class="checkbox">
+                            <label>
+                                <input type="checkbox" id="setting-natural-mp-stam" checked> Use natural MP stamina
+                            </label>
+                        </div>
+                        <div class="checkbox">
+                            <label>
+                                <input type="checkbox" id="setting-mobius-day"> Mobius Day elixir spam
+                            </label>
+                        </div>
+                        <div class="checkbox">
+                            <label>
+                                <input type="checkbox" id="setting-bahamut-lagoon"> Bahamut Lagoon
+                            </label>
+                        </div>
+                        <div class="checkbox">
+                            <label>
+                                <input type="checkbox" id="setting-jp-only"> JP Content
+                            </label>
+                        </div>
+                    </form>
+                </div>
             </div>
             <div id="weapon-boost-area" class="col-sm-10">
                 <div id="weapon-slot-template" class="weapon-boost-group col hidden">
@@ -63,6 +84,14 @@
             </div>
         </div>
     </div>
+
+
+    <script src="js/editablegrid/editablegrid.js"></script>
+    <script src="js/editablegrid/editablegrid_renderers.js"></script>
+    <script src="js/editablegrid/editablegrid_editors.js"></script>
+    <script src="js/editablegrid/editablegrid_validators.js"></script>
+    <script src="js/editablegrid/editablegrid_utils.js"></script>
+    <script src="js/editablegrid/editablegrid_charts.js"></script>
 
     <script src="js/common.js"></script>
     <script src="js/db.js"></script>
