--- a/index.html
+++ b/index.html
@@ -81,6 +81,20 @@
                         </div>
                     </div>
                 </div>
+                <div id="preset-template" class="hidden">
+                    <div class="dropdown">
+                        <button class="dropdown-toggle" type="button" id="test" data-toggle="dropdown">
+                            <span class="caret"></span>
+                        </button>
+                        <ul class="dropdown-menu">
+                            <li>
+                                <a href="#" preset="preset-base">Base Stat</a>
+                                <a href="#" preset="preset-min">Minimum Stat (with all mods)</a>
+                                <a href="#" preset="preset-max">Max Boost</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
