--- a/index.html
+++ b/index.html
@@ -71,9 +71,14 @@
             </div>
             <div id="weapon-boost-area" class="col-sm-10">
                 <div id="weapon-slot-template" class="weapon-boost-group col hidden">
-                    <div>
+                    <div class="row">
                         <img src="http://via.placeholder.com/50x50" width=50 height=50>
                         <label class="weapon-slot-name">Weapon Name</label>
+                        <div class="pull-right">
+                            <button type="button" class="close">
+                                <span>&times</span>
+                            </button>
+                        </div>
                     </div>
                     <div class="row">
                         <div class="stat-calc-input"></div>
@@ -95,7 +100,7 @@
                 </div>
                 <div id="preset-template" class="hidden">
                     <div class="dropdown">
-                        <button class="dropdown-toggle" type="button" id="test" data-toggle="dropdown">
+                        <button class="dropdown-toggle" type="button" data-toggle="dropdown">
                             <span class="caret"></span>
                         </button>
                         <ul class="dropdown-menu">
