--- a/index.html
+++ b/index.html
@@ -32,29 +32,29 @@
                     <h4>Boost Settings</h4>
                     <form>
                         <div class="checkbox">
-                            <label>
+                            <label data-toggle="tooltip" title="288 natural stamina regeneration per day">
                                 <input type="checkbox" option="natural-sp-stam" checked> Use natural SP stamina
                             </label>
                         </div>
                         <div class="checkbox">
-                            <label>
+                            <label data-toggle="tooltip" title="288 natural stamina regeneration per day">
                                 <input type="checkbox" option="natural-mp-stam" checked> Use natural MP stamina
                             </label>
                         </div>
                         <div class="checkbox">
-                            <label>
-                                <input type="checkbox" option="mobius-day"> Mobius Day elixir spam
+                            <label data-toggle="tooltip" title="per elixir used">
+                                <input type="checkbox" option="mobius-day"> Double Stamina Refill
                             </label>
                         </div>
                         <div class="checkbox">
-                            <label>
+                            <label data-toggle="tooltip" title="4.5 minutes per stamina spent, instead of 3">
                                 <input type="checkbox" option="bahamut-lagoon"> Bahamut Lagoon
                             </label>
                         </div>
 
                         <div class="form-group">
                             <label>
-                                Stamina Level
+                                Max SP Stamina
                                 <input type="number" min=0 value=90>
                             </label>
                         </div>
@@ -63,7 +63,7 @@
                 <div id="other-settings">
                     <h4>Other Settings</h4>
                     <div class="checkbox">
-                        <label>
+                        <label data-toggle="tooltip" title="Includes all weapons that are in JP version">
                             <input type="checkbox" option="jp-only"> JP Content
                         </label>
                     </div>
@@ -96,6 +96,9 @@
                                 </tr>
                             </table>
                         </div>
+                    </div>
+                    <div class="row weapon-slot-notification">
+                        <label></label>
                     </div>
                 </div>
                 <div id="preset-template" class="hidden">
