Fixed db errors, added extra UX elements

--- a/index.html
+++ b/index.html
@@ -33,22 +33,22 @@
                     <form>
                         <div class="checkbox">
                             <label data-toggle="tooltip" title="288 natural stamina regeneration per day">
-                                <input type="checkbox" option="natural-sp-stam" checked> Use natural SP stamina
+                                <input type="checkbox" data-option="natural-sp-stam" checked> Use natural SP stamina
                             </label>
                         </div>
                         <div class="checkbox">
                             <label data-toggle="tooltip" title="288 natural stamina regeneration per day">
-                                <input type="checkbox" option="natural-mp-stam" checked> Use natural MP stamina
+                                <input type="checkbox" data-option="natural-mp-stam" checked> Use natural MP stamina
                             </label>
                         </div>
                         <div class="checkbox">
                             <label data-toggle="tooltip" title="per elixir used">
-                                <input type="checkbox" option="mobius-day"> Double Stamina Refill
+                                <input type="checkbox" data-option="mobius-day"> Double Stamina Refill
                             </label>
                         </div>
                         <div class="checkbox">
                             <label data-toggle="tooltip" title="4.5 minutes per stamina spent, instead of 3">
-                                <input type="checkbox" option="bahamut-lagoon"> Bahamut Lagoon
+                                <input type="checkbox" data-option="bahamut-lagoon"> Bahamut Lagoon
                             </label>
                         </div>
 
@@ -64,7 +64,7 @@
                     <h4>Other Settings</h4>
                     <div class="checkbox">
                         <label data-toggle="tooltip" title="Includes all weapons that are in JP version">
-                            <input type="checkbox" option="jp-only"> JP Content
+                            <input type="checkbox" data-option="jp-only"> JP Content
                         </label>
                     </div>
                 </div>
@@ -108,9 +108,9 @@
                         </button>
                         <ul class="dropdown-menu">
                             <li>
-                                <a href="#" preset="preset-base">Base Stat</a>
-                                <a href="#" preset="preset-min">Minimum Stat (with all mods)</a>
-                                <a href="#" preset="preset-max">Max Boost</a>
+                                <a href="#" data-preset="preset-base">Base Stat</a>
+                                <a href="#" data-preset="preset-min">Minimum Stat (with all mods)</a>
+                                <a href="#" data-preset="preset-max">Max Boost</a>
                             </li>
                         </ul>
                     </div>
